OK [#105683680] - Add test code coverage badge to README.md